src/objects/inscor__Activity__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Accounts_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Accounts Payable Account)</relationshipLabel>
        <relationshipName>Transaction_Activities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Accounts_Payable_Amount__c</fullName>
        <label>Accounts Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Cost__c</fullName>
        <label>Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Activity_Type__c</fullName>
        <label>Activity Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>ACQ Cost Change</fullName>
                </value>
                <value>
                    <fullName>Rep Cost Change</fullName>
                </value>
                <value>
                    <fullName>Qty Change</fullName>
                </value>
                <value>
                    <fullName>Receiving RMA</fullName>
                </value>
                <value>
                    <fullName>Cancel Shipment</fullName>
                </value>
                <value>
                    <fullName>Issued Credit</fullName>
                </value>
                <value>
                    <fullName>New Inventory</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Return Inventory</fullName>
                </value>
                <value>
                    <fullName>Return Core</fullName>
                </value>
                <value>
                    <fullName>Core Repair</fullName>
                </value>
                <value>
                    <fullName>Send Repaired</fullName>
                </value>
                <value>
                    <fullName>Release Protected Inventory</fullName>
                </value>
                <value>
                    <fullName>Cancel Receipt</fullName>
                </value>
                <value>
                    <fullName>Cancel Exchange</fullName>
                </value>
                <value>
                    <fullName>Material Issue WIP</fullName>
                </value>
                <value>
                    <fullName>Material Return WIP</fullName>
                </value>
                <value>
                    <fullName>Inventory Import</fullName>
                </value>
                <value>
                    <fullName>Labor WIP</fullName>
                </value>
                <value>
                    <fullName>WIP Parts Reject</fullName>
                </value>
                <value>
                    <fullName>Return EX Core</fullName>
                </value>
                <value>
                    <fullName>Consignor Payable</fullName>
                </value>
                <value>
                    <fullName>WO Invoice</fullName>
                </value>
                <value>
                    <fullName>Owner Adjustment</fullName>
                </value>
                <value>
                    <fullName>Misc Charge WIP</fullName>
                </value>
                <value>
                    <fullName>Lease Invoice</fullName>
                </value>
                <value>
                    <fullName>Expense Report</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__After_Acq_Cost__c</fullName>
        <label>After Acq Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__After_Qty__c</fullName>
        <label>After Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__After_Repair_Cost__c</fullName>
        <label>After Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM</label>
        <referenceTo>inscor__BOM__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Before_Acq_Cost__c</fullName>
        <label>Before Acq Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Before_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Before Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities (Before Inventory)</relationshipLabel>
        <relationshipName>Transaction_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Before_Qty__c</fullName>
        <label>Before Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Before_Repair_Cost__c</fullName>
        <label>Before Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Acquisition_Cost__c</fullName>
        <label>Company Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_After_Acq_Cost__c</fullName>
        <label>Company After Acq Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_After_Repair_Cost__c</fullName>
        <label>Company After Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Before_Acq_Cost__c</fullName>
        <label>Company Before Acq Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Before_Repair_Cost__c</fullName>
        <label>Company Before Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_EX_Core_Unit_Repair_Cost__c</fullName>
        <label>Company EX Core Unit Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Extended_Cost_Change__c</fullName>
        <formula>(inscor__Company_Acquisition_Cost__c + inscor__Company_Repair_Cost__c) * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Extended Cost Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Labor_Cost__c</fullName>
        <label>Company Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Repair_Cost__c</fullName>
        <label>Company Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cons_Rate__c</fullName>
        <label>Cons Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Consignor_Payable_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignor Payable #</label>
        <referenceTo>inscor__Consignor_Payable__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Consignor_Payable__c</fullName>
        <label>Consignor Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Conversion_Rate_Date__c</fullName>
        <label>Currency Conversion Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Conversion_Rate__c</fullName>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_From_Inventory__c</fullName>
        <label>Currency From Inventory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Exchange_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Exchange Summary</label>
        <referenceTo>inscor__Customer_Exchange_Summary__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer/Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>EX</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>WO</fullName>
                </value>
                <value>
                    <fullName>LEASE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Doc__c</fullName>
        <label>Doc #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Ex_Core_Unit_Repair_Cost__c</fullName>
        <label>Ex Core Unit Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Type__c</fullName>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/OH Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/SV Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/Repairable Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Expense_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Expense Account-Acq)</relationshipLabel>
        <relationshipName>Transaction_Activities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Expense Account-Rep)</relationshipLabel>
        <relationshipName>Transaction_Activities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Amount_Acq__c</fullName>
        <label>Expense Amount-Acq</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Amount_Rep__c</fullName>
        <label>Expense Amount-Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Cost_Change__c</fullName>
        <formula>(inscor__Acquisition_Cost__c +  inscor__Repair_Cost__c ) *  inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Freight_Amount__c</fullName>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__INVC_Date__c</fullName>
        <label>INVC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__INVC_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INVC Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__INVC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INVC #</label>
        <referenceTo>inscor__Invoice__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Inventory Account-Acq)</relationshipLabel>
        <relationshipName>Transaction_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Inventory Account-Rep)</relationshipLabel>
        <relationshipName>Transaction_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Amount_Acq__c</fullName>
        <label>Inventory Amount-Acq</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Amount_Rep__c</fullName>
        <label>Inventory Amount-Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Number__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__LOT_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOT Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__LOT_Rate__c</fullName>
        <label>LOT Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Cost__c</fullName>
        <label>Labor Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labor Entry</label>
        <referenceTo>inscor__Labor_Entry__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Hours__c</fullName>
        <label>Labor Hours</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Price__c</fullName>
        <label>Labor Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Line</label>
        <referenceTo>inscor__Lease_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Type__c</fullName>
        <formula>IF(ISPICKVAL(inscor__Doc_Type__c , &apos;SO&apos;), TEXT(inscor__Release_Line__r.inscor__Sales_Order_Line__r.inscor__Order_Type__c) , &apos;&apos;)</formula>
        <label>Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Value__c</fullName>
        <label>Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Line__c</fullName>
        <label>Line #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Move_Repair_Cost_to_Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Repair Cost to Accrual?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Move_Repair_Cost_to_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Repair Cost to LOT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Non_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Inventory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Original_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original TA</label>
        <referenceTo>inscor__Activity__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code_Adjustment__c</fullName>
        <label>Owner Code Adjustment#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Issue</label>
        <referenceTo>inscor__PO_Issue__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Payment_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Voucher</label>
        <referenceTo>inscor__Payment_Voucher__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RLS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RLS#</label>
        <referenceTo>inscor__Release__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO Issue</label>
        <referenceTo>inscor__RO_Issue__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Receivable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Receivable Account)</relationshipLabel>
        <relationshipName>Transaction_Activities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Receivable_Amount__c</fullName>
        <label>Receivable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Received_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Allocation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Cost__c</fullName>
        <label>Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Name__c</fullName>
        <formula>inscor__Work_Order_Task__r.inscor__Task_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Adjustments__c</fullName>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Vouchers_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vouchers Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (Payable Account)</relationshipLabel>
        <relationshipName>Transaction_Activities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Vouchers_Payable_Amount__c</fullName>
        <label>Vouchers Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Labor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO Labor Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (WO Labor Account)</relationshipLabel>
        <relationshipName>Transaction_ActivitiesBXRn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Labor_Amount__c</fullName>
        <label>WO Labor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Labor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO WIP Labor Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (WIP Labor Account)</relationshipLabel>
        <relationshipName>Transaction_Activities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Labor_Amount__c</fullName>
        <label>WO WIP Labor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Misc_Charge_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO WIP Misc Charge Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (WO WIP Misc Charge Account)</relationshipLabel>
        <relationshipName>Transaction_ActivitiesBJej</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Misc_Charge_Amount__c</fullName>
        <label>WO WIP Misc Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Parts_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO WIP Parts Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Transaction Activities (WIP Parts Account)</relationshipLabel>
        <relationshipName>Transaction_Activities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO_WIP_Parts_Amount__c</fullName>
        <label>WO WIP Parts Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Transaction Activities</relationshipLabel>
        <relationshipName>Transaction_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>